Disabled submit button after first click

--- a/gogoanime/templates/base_generic.html
+++ b/gogoanime/templates/base_generic.html
@@ -8,6 +8,8 @@
   <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  {% block scripts %}{% endblock %}
 </head>
 <body>
   <div class="container">
