--- a/gogoanime/templates/index.html
+++ b/gogoanime/templates/index.html
@@ -1,8 +1,19 @@
 {% extends "base_generic.html" %}
 
+{% block scripts %}
+<script>
+  $(document).ready(function() {
+    $('#VideoURLForm').one('submit', function() {
+      $(this).find('input[type="submit"]').attr('disabled','disabled');
+      $(this).append("<p>Fetching raw video... Please wait...");
+    });
+  });
+</script>
+{% endblock %}
+
 {% block content %}
   <h1>VideoRipper</h1>
-  <form action="" method="post">
+  <form action="" method="post" id="VideoURLForm">
     {% csrf_token %}
     <table>
     {{ form }}
