--- a/gogoanime/templates/watch_video.html
+++ b/gogoanime/templates/watch_video.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <video width="400" controls>
+<video id="myVideo" controls>
   <source src="{{ raw_url }}" type="video/mp4">
   Your browser does not support HTML video.
 </video>
