--- a/gogoanime/static/css/styles.css
+++ b/gogoanime/static/css/styles.css
@@ -1,4 +1,120 @@
-.container {
-	margin-top: 25px;
-	width: 90%;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
+
+html {
+	height: 100%;
+}
+
+body {
+	font-family: 'Source Sans Pro', sans-serif;
+	background-color: #00a651;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+
+h1 {
+	font-size: 3.5em;
+	font-weight: 300;
+}
+
+input, select {
+	width: 100%;
+	background-color: rgba(0,0,0,0.1);
+	padding: 7px;
+	border: none;
+	border-radius: 5px;
+	color: white;
+}
+
+input[type='submit'] {
+	max-width: 300px;
+	border: 1px solid white;
+	border-radius: 2px;
+}
+
+input[type='submit']:hover {
+	background-color: #00b356;
+}
+
+input:focus, select:focus {
+	outline: none;
+	border-radius: 5px;
+}
+
+option {
+	color: black;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #d3d3d3;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #d3d3d3;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #d3d3d3;
+}
+
+.wrapper {
+	margin: auto;
+	width: 40%;
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 100%;
+  background-color: black;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #FFA500;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.overlay {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 10;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgba(0,0,0,0.7);
+}
+
+@media (max-width: 1000px) {
+	.wrapper {
+		width: 60%;
+	}
+}
+
+@media (max-width: 600px) {
+	.wrapper {
+		width: 80%;
+	}
+}
+
+@media (max-width: 320px) {
+	h1 {
+		font-size: 7vh;
+	}
 }
