--- a/gogoanime/templates/index.html
+++ b/gogoanime/templates/index.html
@@ -1,23 +1,17 @@
 {% extends "base_generic.html" %}
 
 {% block scripts %}
-<script>
-  $(document).ready(function() {
-    $('#VideoURLForm').one('submit', function() {
-      $(this).find('input[type="submit"]').attr('disabled','disabled');
-      $(this).append("<p>Fetching raw video... Please wait...");
-    });
-  });
-</script>
+  {% load static %}
+  <script src="{% static 'js/form_scripts.js' %}"></script>
 {% endblock %}
 
 {% block content %}
-  <h1>VideoRipper</h1>
-  <form action="" method="post" id="VideoURLForm">
-    {% csrf_token %}
-    <table>
-    {{ form }}
-    </table>
-    <input type="submit" value="Submit">
-  </form>
+  <center>
+    <h1>videoripper</h1>
+    <form action="" method="post" id="VideoURLForm">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="submit" value="Submit">
+    </form>
+  </center>
 {% endblock %}
